deploy/deployment-provider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider
  namespace: qclipboard
spec:
  selector:
    matchLabels:
      application: qclipboard
      component: provider
  template:
    metadata:
      labels:
        application: qclipboard
        component: provider
    spec:
      containers:
        - image: shoppon/qclipboard:latest
          name: api
          # command: ["/bin/bash", "-c", "--"]
          # args: ["while true; do sleep 30; done;"]
          command: ["qclipboard-provider"]
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 2000m
              memory: 2Gi
